<resources>
    <string name="app_name">RU UFMS</string>
    <string name="buy_ticket">Comprar ficha</string>
    <string name="dessert">Sobremesa</string>
    <string name="dish_image_description">Imagem do prato</string>
    <string name="base_dish">Prato base</string>
    <string name="garnish">Guarnição</string>
    <string name="salad">Salada</string>
    <string name="ticket_bought">Ficha comprada</string>
    <string name="about">Sobre</string>
    <string name="app_description">Aplicativo de vendas de restaurante universitário. Desenvolvido como trabalho de Tópicos em Sistemas de Informação II.</string>
    <string name="developers">Desenvolvedores</string>
    <string name="developers_list">Pedro Braghin da Silva\nRodinei Martins Coelho</string>
    <string name="purchases">Compras</string>
    <string name="dish_imagem">Imagem do prato</string>
    <string name="fishIconDescription">Ícone de peixe</string>
    <string name="main_dish_label">Prato principal</string>
    <string name="vegetarian_dish_label">Vegetariano</string>
    <string name="header_title">Cardápio de hoje</string>
    <string name="restaurant_status">Aberto agora</string>
    <string name="main_dish_button_description">Imagem com um fundo azul claro, com um ícone de peixe centralizado horziontalmente à esquerda, e um texto ao centro dizendo "Prato Principal"</string>
    <string name="vegetarian_dish_button_description">Imagem com um fundo azul escuro, com um ícone de cenour centralizado horziontalmente à esquerda, e um texto ao centro dizendo "Vegetariano"</string>
    <string name="welcome">Bem-Vindo</string>
    <string name="to_continue">Continuar</string>
    <string name="home_icon_title">Início</string>
    <string name="history_icon_title">Histórico</string>
    <string name="wallet_icon_title">Carteira</string>
    <string name="profile_icon_title">Perfil</string>
    <string name="main_dishes">Pratos principais</string>
    <string name="vegetarian_dishes">Pratos vegetarianos</string>
    <string name="history">Histórico</string>
    <string name="exit">Sair</string>
    <string name="share">Compartilhar</string>
    <string name="usage">Fichas utilizadas</string>
    <string name="home_meat_scroll_label">Opções com carne para a semana</string>
    <string name="home_vegetarian_scroll_label">Opções vegenarianas para a semana</string>
    <string name="signin">Entrar</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="no_account_label">Não possui uma conta?</string>
    <string name="signup">Cadastre-se</string>
    <string name="fullname">Nome completo</string>
    <string name="rga">RGA</string>
    <string name="to_signup">Cadastrar</string>
    <string name="signout">Sair</string>
    <string name="balance">Saldo</string>
    <string name="recharge">Recarregar</string>
    <string name="real_symbol">"R$ "</string>
    <string name="recharge_wallet">Recarregar Carteira</string>
    <string name="value">Valor</string>
</resources>