<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.SignupActivity">

  <TextView
      android:id="@+id/signupText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="24dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="24dp"
      android:text="@string/signup"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />

  <Button
      android:id="@+id/confirmSignupButton"
      android:layout_width="320dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="32dp"
      android:text="@string/to_signup"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

  <EditText
      android:id="@+id/emailInput"
      android:layout_width="320dp"
      android:layout_height="48dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:autofillHints="emailAddress"
      android:ems="10"
      android:inputType="textEmailAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

  <TextView
      android:id="@+id/emailLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:labelFor="@id/emailInput"
      android:text="@string/email"
      app:layout_constraintStart_toStartOf="@+id/emailInput"
      app:layout_constraintTop_toBottomOf="@+id/rgaInput" />

  <TextView
      android:id="@+id/passwordLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:labelFor="@id/passwordInput"
      android:text="@string/password"
      app:layout_constraintStart_toStartOf="@+id/passwordInput"
      app:layout_constraintTop_toBottomOf="@+id/emailInput" />

  <EditText
      android:id="@+id/passwordInput"
      android:layout_width="320dp"
      android:layout_height="48dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:autofillHints="password"
      android:ems="10"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

  <TextView
      android:id="@+id/fullnameLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:labelFor="@id/fullnameInput"
      android:text="@string/fullname"
      app:layout_constraintStart_toStartOf="@+id/fullnameInput"
      app:layout_constraintTop_toBottomOf="@+id/signupText" />

  <TextView
      android:id="@+id/rgaLabel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:labelFor="@id/rgaInput"
      android:text="@string/rga"
      app:layout_constraintStart_toStartOf="@+id/fullnameInput"
      app:layout_constraintTop_toBottomOf="@+id/fullnameInput" />

  <EditText
      android:id="@+id/fullnameInput"
      android:layout_width="320dp"
      android:layout_height="48dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:autofillHints="name"
      android:ems="10"
      android:inputType="text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/fullnameLabel" />

  <EditText
      android:id="@+id/rgaInput"
      android:layout_width="320dp"
      android:layout_height="48dp"
      android:layout_marginStart="32dp"
      android:layout_marginEnd="32dp"
      android:ems="10"
      android:importantForAutofill="no"
      android:inputType="text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rgaLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>